Closed Bug 631156 Opened 15 years ago Closed 15 years ago

Bug 628885 breaks non-libxul builds with an undefined reference error for CrashReporter::AppendAppNotesToCrashReport(nsACString_internal const&)

Categories

(Core :: XPCOM, defect)

x86
macOS
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

(Keywords: regression)

Attachments

(1 file)

Making symlinks to the original object files in the archive libraries ../../chrome/src/libchrome_s.a ../ds/libxpcomds_s.a ../io/libxpcomio_s.a ../components/libxpcomcomponents_s.a ../threads/libxpcomthreads_s.a ../proxy/src/libxpcomproxy_s.a ../base/libxpcombase_s.a ../reflect/xptcall/src/libxptcall.a ../reflect/xptcall/src/libxptcmd.a ../reflect/xptinfo/src/libxptinfo.a ../../dist/lib/libxpt.a ../string/src/libstring_s.a Undefined symbols: "CrashReporter::AppendAppNotesToCrashReport(nsACString_internal const&)", referenced from: _NS_DebugBreak_P in nsDebugImpl.o ld: symbol(s) not found collect2: ld returned 1 exit status I have a patch which fixes this.
Attached patch Patch (v1)Splinter Review
Whoever reviews this faster loves our developers on Mac more.
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #509353 - Flags: review?(ted.mielczarek)
Attachment #509353 - Flags: review?(khuey)
Attachment #509353 - Flags: review?(jones.chris.g)
Attachment #509353 - Flags: review?(benjamin)
Comment on attachment 509353 [details] [diff] [review] Patch (v1) (In reply to comment #1) > Created attachment 509353 [details] [diff] [review] > Patch (v1) > > Whoever reviews this faster loves our developers on Mac more. Don't misconstrue this; I just happened to be clearing my review queue ;). Also, this patch is going to cause a crashreporter test to fail, but I don't think anyone cares.
Attachment #509353 - Flags: review?(jones.chris.g) → review+
(In reply to comment #2) > (In reply to comment #1) > > Created attachment 509353 [details] [diff] [review] > > Patch (v1) > > > > Whoever reviews this faster loves our developers on Mac more. > > Don't misconstrue this; I just happened to be clearing my review queue ;). You should switch to Mac! :P > Also, this patch is going to cause a crashreporter test to fail, but I don't > think anyone cares. This wouldn't be the first test to fail on non-libxul, but as you suspect, nobody cares! (We have tests which crash the browser on non-libxul, in case you're curious!)
Keywords: checkin-needed
Attachment #509353 - Flags: review?(ted.mielczarek)
Attachment #509353 - Flags: review?(khuey)
Attachment #509353 - Flags: review?(benjamin)
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Can't wait till we kill non-libxul builds!
Can't wait till we wait libxul builds fast! ;)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: