Bug 631156 - Bug 628885 breaks non-libxul builds with an undefined reference error for CrashReporter::AppendAppNotesToCrashReport(nsACString_internal const&), r=cjones,a=roc