xpcom/base/nsDebugImpl.cpp
@@ -334,7 +334,7 @@ NS_DebugBreak(PRUint32 aSeverity, const char *aStr, const char *aExpr,
      return;
 
    case NS_DEBUG_ABORT: {
-#ifdef MOZ_CRASHREPORTER
+#if defined(MOZ_CRASHREPORTER) && defined(MOZ_ENABLE_LIBXUL)
      nsCString note("xpcom_runtime_abort(");
      note += buf.buffer;
      note += ")";
